--- a/tickets-booking/pom.xml
+++ b/tickets-booking/pom.xml
@@ -78,7 +78,15 @@
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
 		</dependency>
+		
+		<!-- Hibernate Validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.2.0.Final</version>
+		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<finalName>tickets-booking</finalName>
