--- a/tickets-booking/pom.xml
+++ b/tickets-booking/pom.xml
@@ -33,6 +33,9 @@
 			<version>3.1.4.RELEASE</version>
 		</dependency>
 
+
+
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -50,6 +53,13 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>3.1.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-asm</artifactId>
+			<version>3.1.4.RELEASE</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -78,16 +88,24 @@
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version>
 		</dependency>
-		
-		<!-- Hibernate Validator -->
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.6</version>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.2.0.Final</version>
+			<version>4.1.0.Final</version>
 		</dependency>
-	</dependencies>
-	
 
+
+
+	</dependencies>
 	<build>
 		<finalName>tickets-booking</finalName>
 		<plugins>
