--- a/tickets-booking/pom.xml
+++ b/tickets-booking/pom.xml
@@ -107,13 +107,25 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>3.2.3.RELEASE</version>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.2.4.RELEASE</version>
 		</dependency>
-		
-		
+
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+
+
+
+
+
+
 
 	</dependencies>
 	<build>
