added mysql scripts

--- a/tickets-booking/src/main/resources/db/db.properties
+++ b/tickets-booking/src/main/resources/db/db.properties
@@ -1,7 +1,15 @@
 #HSQL configuration
-jdbc.driverClassName = org.hsqldb.jdbcDriver
-jdbc.url = jdbc:hsqldb:mem:tickets-booking
-jdbc.username = sa
-jdbc.password = 
+#jdbc.driverClassName = org.hsqldb.jdbcDriver
+#jdbc.url = jdbc:hsqldb:mem:sergii_stets_tickets_booking
+#jdbc.username = sa
+#jdbc.password = 
+#db.script.location.schema = db/scripts/hsql/schema.sql  
+#db.script.location.data= db/scripts/hsql/data.sql
 
 #MySql configuration
+jdbc.driverClassName = com.mysql.jdbc.Driver
+jdbc.url = jdbc:mysql://localhost:3306/sergii_stets_tickets_booking
+jdbc.username = root
+jdbc.password = 
+db.script.location.schema = db/scripts/mysql/schema.sql
+db.script.location.data =  db/scripts/mysql/data.sql
