--- a/tickets-booking/pom.xml
+++ b/tickets-booking/pom.xml
@@ -120,11 +120,12 @@
 			<version>1.4</version>
 		</dependency>
 
-
-
-
-
-
+		<!-- MySql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 
 
 	</dependencies>
