added error handling

--- a/tickets-booking/src/main/webapp/WEB-INF/web.xml
+++ b/tickets-booking/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,19 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 
-<!-- Path to application context -->
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/error/500.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>400</error-code>
+		<location>/WEB-INF/views/error/400.jsp</location>
+	</error-page>
+
+	<!-- Path to application context -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/application-context.xml</param-value>
+		<param-value>classpath:spring/main-context.xml</param-value>
 	</context-param>
 
 	<listener>
