added some hibernate configuration

--- a/tickets-booking/src/main/resources/storage/storage.properties
+++ b/tickets-booking/src/main/resources/storage/storage.properties
@@ -11,3 +11,8 @@ jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/sergii_stets_tickets_booking
 jdbc.username = root
 jdbc.password = 
+
+#Hibernate configuration
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql =  true
+hibernate.hbm2ddl.auto =  update
