--- a/tickets-booking/src/main/resources/storage/storage.properties
+++ b/tickets-booking/src/main/resources/storage/storage.properties
@@ -14,3 +14,8 @@ jdbc.password =
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql =  true
 hibernate.hbm2ddl.auto =  update
+
+#Mongo configuration
+mongo.host=127.0.0.1
+mongo.port=27017
+mongo.db.name=sergii_stets_tickets_booking
